去除掉写入vector db中的meta